# neuraltree

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  package.json  pyproject.toml  requirements.txt
docs/: AUTOLOOP_PROOF_RUN.md  FEATURE_INCIDENT_MEMORY.md  HANDOFF.md  HANDOFF_2026-04-05_SESSION2.md  HANDOFF_2026-04-05_SESSION3.md  HANDOFF_2026-04-06_SESSION4.md  HANDOFF_2026-04-06_SESSION5.md  HANDOFF_2026-04-06_SESSION6.md  HANDOFF_2026-04-07_SESSION10.md  HANDOFF_2026-04-07_SESSION11.md  HANDOFF_2026-04-07_SESSION13.md  HANDOFF_2026-04-07_SESSION14.md  PHASE1_5_PLAN.md  PHASE1_PLAN.md
docs/archive/: 2026-04-07-finish-and-ship.md  HANDOFF_2026-04-06_SESSION6.md  HANDOFF_2026-04-07_SESSION12.md  HANDOFF_2026-04-07_SESSION15.md  HANDOFF_2026-04-07_SESSION16.md  HANDOFF_2026-04-07_SESSION17.md  HANDOFF_2026-04-07_SESSION18.md  HANDOFF_2026-04-07_SESSION19.md  HANDOFF_2026-04-07_SESSION7.md  HANDOFF_2026-04-07_SESSION8.md  HANDOFF_2026-04-07_SESSION9.md
docs/concepts/: _INDEX.md  algorithm-tool-judgment-claude.md  artery-principle.md  autoloop.md  explore-first-pipeline.md  flow-score.md  hop-rule.md  index-first-pipeline.md  knowledge-map.md  sandbox-first.md  trace-before-prune.md  user-approves-destructive.md  viking-semantic-search.md
docs/specs/: 2026-04-04-neuraltree-skill-design.md
lessons/: _INDEX.md  autoloop.md  first-run-feedback.md  knowledge-map.md  skill-pseudocode.md  v2-design-decisions.md  wiki-lint.md
src/neuraltree_mcp/: __init__.py  server.py  text_utils.py  validation.py
src/skill/: SKILL.md
tests/: conftest.py
(+70 files in other folders)
